css/style.css
html, body {
    padding: 0;
    margin: 0;
}

body {
    width: 100vw;
    height: 100vh;
    background-image: url("../images/galaxy_background.svg");
    background-size: cover;
}

div {
    padding: 0;
    margin: 0;
}

.c-top {
    color: aliceblue;
    padding-top: 150px;
}

.main-grid {
    width: 100vw;
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 525px 1fr;
    grid-template-rows: 1fr 1fr 450px;
}

.s-btn {
    grid-column: 2;
    grid-row: 1;
    width: 160px;
    height: 50px;
    margin: 0 auto;
    border-radius: 25px;
}
.c-top {
    grid-column: 2;
    grid-row: 1;
    margin: 0 auto;
}

#board {
    width: max-content;
    grid-column: 2;
    grid-row: 3;
    background-image: url("../images/game_board.svg");
    background-size: cover;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
}
.cell {
    width: 75px;
    height: 75px;
}

/* Player 0 (no player) will be transparent */
.player0 {
    background-color: transparent;
}

/* player 1 red gamecell image */
.player1 {
    background-image: url("../images/red_game_piece.svg");
}

/* player 2 yellow gamecell image */
.player2 {
    background-image: url("../images/yellow_game_piece.svg.svg");	
}

/* animation for falling cell
.fall {
    animation-name: fall-animation;
    animation-duration: 500ms;
}
  
@keyframes fall-animation {
    from {
      transform: translateY(-200px);
    }
    to {
      transform: translateY(0);
    }
} */

